# python-flask-server/swagger_server/controllers/emp_server.py
@@ -1,9 +1,11 @@
 import json
 import redis
+import uuid
 import swagger_server.controllers.cluster_manager as cluster
 from swagger_server.models.app_deploy import AppDeploy  # noqa: E501
 from swagger_server.models.app_info import AppInfo  # noqa: E501
 from swagger_server.models.app_state import AppState  # noqa: E501
+from swagger_server.models.user_info import UserInfo
 from swagger_server.models.app_total_info import AppTotalInfo  # noqa: E501
 from swagger_server.models.array_of_apps import ArrayOfApps  # noqa: E501
 from swagger_server import util
@@ -12,13 +14,13 @@ from swagger_server import util
 redis = redis.StrictRedis(host='172.17.0.2', port=6379, db=0, decode_responses=True)
 
 
-def change_app_state(app_id, state):
+def change_app_state(app_id, app_state):
     """Changes an application state
 
     :param app_id: ID of the application to change its state
     :type app_id: int
-    :param state: Parameters that will change the state of the application
-    :type state: dict | bytes
+    :param app_state: Parameters that will change the state of the application
+    :type app_state: dict | bytes
 
     :rtype: AppTotalInfo
     """
@@ -29,12 +31,24 @@ def change_app_state(app_id, state):
     if app is None:
         return
 
-    if cluster.change_app_state(app_id=app_id, state=state):
+    if cluster.change_app_state(app_id=app_id, state=app_state):
         app_info = cluster.get_app(app_id)
         return app_info
 
     else:
         return
+
+
+def create_user(user_info):
+    """Creates a user with all the necessary information
+
+    :param user_info: User information
+    :type user_info: dict | bytes
+
+    :rtype: str
+    """
+
+    return 'User Created'
 
 
 def delete_app(app_id):
@@ -60,26 +74,25 @@ def delete_app(app_id):
     return app
 
 
-def deploy_app(deploy):
+def deploy_app(app_info):
     """Deploys an application in the platform
 
-    :param deploy: Application object to be deployed
-    :type deploy: dict | bytes
+    :param app_info: Application object to be deployed
+    :type app_info: dict | bytes
 
-    :rtype: AppTotalInfo
+    :rtype: AppInfo
     """
 
     # TODO Store in redis
 
-    r = redis.StrictRedis(host='172.17.0.2', port=6379, db=0)
-    app = 'app_%s' % deploy
-    r.set(app, deploy)
+    app = 'app_%s' % app_info
+    redis.set(app, app_info)
     # r.execute_command()
-    value = r.get('app')
+    value = redis.get('app')
     test = value(AppDeploy)
     print(test)
 
-    app_id = cluster.deploy_app(deploy)
+    app_id = cluster.deploy_app(app_info)
     if app_id is None:
         return
 
@@ -103,7 +116,6 @@ def get_app(app_id):
 
     :rtype: AppTotalInfo
     """
-
     app_info = cluster.get_app(app_id)
     if app_info is None:
         return
@@ -118,27 +130,34 @@ def get_app_tracing(app_id):
 
     :rtype: str
     """
-
     app_link = cluster.get_app_tracing(app_id)
 
     return app_link
 
 
-def create_user(body):
-
-    return 'User Created'
-
-
-def login(user_id, body):
-    return "Login"
-
-
 def hello_world():
     """EMP Working!
 
-    :rtype: None
+    :rtype: str
     """
 
-    #print(str(value, 'utf-8'))
+    # print(str(value, 'utf-8'))
 
     return "EMP WORKING!"
+
+
+def login(user_id, user_info):
+    """User login
+
+    :param user_id: ID of the user to login
+    :type user_id: int
+    :param user_info: User information
+    :type user_info: dict | bytes
+
+    :rtype: str
+    """
+
+    return "Login"
+
+
+
