# swagger.yaml
@@ -15,6 +15,8 @@ paths:
       responses:
         200:
           description: OK
+          schema:
+            type: "string"
   /app:
     get:
         operationId: application.get_all_apps
@@ -31,10 +33,16 @@ paths:
               $ref: '#/definitions/ArrayOfApps'
           400:
             description: "Bad request."
+            schema:
+              type: "string"
           404:
             description: "Not found."
+            schema:
+              type: "string"            
           500:
             description: "Internal server error."
+            schema:
+              type: "string"
     post:
       operationId: application.deploy_app
       tags: [emp_server]
@@ -45,7 +53,7 @@ paths:
       - "application/json"
       parameters:
       - in: "body"
-        name: "deploy"
+        name: "app_info"
         description: "Application object to be deployed"
         required: true
         schema:
@@ -57,8 +65,12 @@ paths:
               $ref: '#/definitions/AppInfo'
         400:
           description: "Bad request."
+          schema:
+            type: "string"
         500:
           description: "Internal server error"
+          schema:
+            type: "string"
   /app/user:
     post:
         operationId: application.create_user
@@ -70,7 +82,7 @@ paths:
         - "application/json"
         parameters:
         - in: "body"
-          name: "body"
+          name: "user_info"
           description: "User information"
           required: true
           schema:
@@ -78,12 +90,20 @@ paths:
         responses:
           200:
             description: "User created successfully"
+            schema:
+              type: "string"
           400:
             description: "Bad request."
+            schema:
+              type: "string"
           404:
             description: "Not found."
+            schema:
+              type: "string"
           500:
             description: "Internal server error."
+            schema:
+              type: "string"
   /app/login/{user_id}:
     post:
         operationId: application.login_user
@@ -101,7 +121,7 @@ paths:
           type: "integer"
           format: "int64"
         - in: "body"
-          name: "body"
+          name: "user_info"
           description: "User information"
           required: true
           schema:
@@ -109,14 +129,24 @@ paths:
         responses:
           200:
             description: "Logged in successfully"
+            schema:
+              type: "string"
           400:
             description: "Bad request."
+            schema:
+              type: "string"
           401:
             description: "Login Failed."
+            schema:
+              type: "string"
           404:
             description: "Not found."
+            schema:
+              type: "string"
           500:
             description: "Internal server error."
+            schema:
+              type: "string"
   /app/{app_id}:
     get:
         operationId: application.get_app
@@ -140,10 +170,16 @@ paths:
               $ref: '#/definitions/AppTotalInfo'
           400:
             description: "Bad request."
+            schema:
+              type: "string"
           404:
             description: "Not found."
+            schema:
+              type: "string"
           500:
             description: "Internal server error."
+            schema:
+              type: "string"
     patch:
       operationId: application.change_app_state
       tags: [emp_server]
@@ -160,7 +196,7 @@ paths:
         type: "integer"
         format: "int64"
       - in: "body"
-        name: "state"
+        name: "app_state"
         description: "Parameters that will change the state of the application"
         required: true
         schema:
@@ -172,10 +208,16 @@ paths:
               $ref: '#/definitions/AppTotalInfo'
         400:
           description: "Bad request."
+          schema:
+            type: "string"
         404:
           description: "Not found."
+          schema:
+            type: "string"
         500:
           description: "Internal server error."
+          schema:
+            type: "string"
     delete:
         operationId: application.delete_app
         tags: [emp_server]
@@ -198,10 +240,16 @@ paths:
               $ref: '#/definitions/AppInfo'
           400:
             description: "Bad request."
+            schema:
+              type: "string"
           404:
             description: "Not found."
+            schema:
+              type: "string"
           500:
             description: "Internal server error."
+            schema:
+              type: "string"
   /app/tracing/{app_id}:
     get:
         operationId: application.get_app_tracing
@@ -226,10 +274,16 @@ paths:
                 example: 127.0.0.1:8080
           400:
             description: "Bad request."
+            schema:
+              type: "string"
           404:
             description: "Not found."
+            schema:
+              type: "string"
           500:
             description: "Internal server error."
+            schema:
+              type: "string"
             
 definitions:
   AppDeploy:
